<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_stereo_vo_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy wrapper for mini_stereo_vo stereo visual odometry library</description>
  <maintainer email="rdgldk@gmail.com">rdgldkthu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>turtlebot4_gz_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
